--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
--> Check of the return of the fork command
+-> A better system error
 -> A real option manager
 -> Cleaning
 -> Option of the Open Group cflow (http://pubs.opengroup.org/onlinepubs/009695399/)
